fix textAlign

--- a/src/components/organisms/PreFooter/styles.module.css
+++ b/src/components/organisms/PreFooter/styles.module.css
@@ -32,9 +32,6 @@
     display: flex;
     flex-direction: column;
   }
-  .preFooter .desc > :first-child {
-    text-align: center !important;
-  }
 
   .preFooterImg {
     width: 100%;
